--- a/readme.html
+++ b/readme.html
@@ -2,3 +2,4 @@
 <p>Git is free software distributed under the GPL.</p>
 <p>Git has a mutable index called stage.</p>
 <p>Git tracks changes of files.</p>
+Creating a new branch is quick & simple.
