--- a/readme.html
+++ b/readme.html
@@ -3,4 +3,4 @@
 <p>Git has a mutable index called stage.</p>
 <p>Git tracks changes of files.</p>
 Creating a new branch is quick AND simple.
---no-off
+--no-offdd
