--- a/readme.html
+++ b/readme.html
@@ -12,3 +12,4 @@ dsfasdf
 20171120test
 20171120 afternoon wanna run away from office and fly to japan
 20171120 afternoon wanna a cup of coffee.
+remark: v 1.0 release
