add content after v1.0

--- a/readme.html
+++ b/readme.html
@@ -13,3 +13,4 @@ dsfasdf
 20171120 afternoon wanna run away from office and fly to japan
 20171120 afternoon wanna a cup of coffee.
 remark: v 1.0 release
+996 is a rediculous method to manage a team.
