modify readme in fanli

--- a/readme.html
+++ b/readme.html
@@ -14,3 +14,4 @@ dsfasdf
 20171120 afternoon wanna a cup of coffee.
 remark: v 1.0 release
 996 is a rediculous method to manage a team.
+To test if I have been succeseful in adding public ssh key of fanli's mac to my github account.
